Implementing resetPassword feature on the frontend and backend side.
