# backend/src/main/java/com/marcinsz/backend/password/PasswordController.java
@@ -1,6 +1,8 @@
 package com.marcinsz.backend.password;
 
+import com.marcinsz.backend.notification.email.ResetPasswordEmailService;
 import com.marcinsz.backend.response.ApiResponse;
+import jakarta.mail.MessagingException;
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
@@ -15,6 +17,7 @@ import org.springframework.web.bind.annotation.*;
 @RequiredArgsConstructor
 public class PasswordController {
     private final PasswordService passwordService;
+    private final ResetPasswordEmailService resetPasswordEmailService;
 
     @PostMapping
     public ResponseEntity<ApiResponse> changePassword(Authentication connectedUser,
@@ -23,6 +26,15 @@ public class PasswordController {
         return ResponseEntity.accepted().body(ApiResponse.builder()
                 .statusCode(HttpStatus.ACCEPTED.value())
                 .message("The password have been changed.")
+                .build());
+    }
+
+    @PostMapping("/reset")
+    public ResponseEntity<ApiResponse> sendResetPasswordEmail(@RequestBody @Valid ResetPasswordRequest resetPasswordRequest) throws MessagingException {
+        resetPasswordEmailService.sendResetPasswordEmail(resetPasswordRequest);
+        return ResponseEntity.ok().body(ApiResponse.builder()
+                .statusCode(HttpStatus.OK.value())
+                .message("A new password have been sent on your email address.")
                 .build());
     }
 }
